issue with overflow-x/y resolved

--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,7 @@ body,html {
 
 .row,  .container-fluid {
     overflow-x: hidden;
+    
     padding:0;
 }
 
@@ -66,11 +67,12 @@ p {
 }
 
 #map {
-min-height: 30vh;
+height: 30vh;
 opacity: 0.8;
 width:100%;
 padding: 0;
 cursor: pointer;
+overflow-y: hidden;
 
 }
 
@@ -113,7 +115,8 @@ cursor: pointer;
       
         top: 0px;
         cursor: pointer;
-        overflow-x: hidden;
+       overflow-x: hidden; 
+       overflow-y: hidden;
       }
       #findhotels {
         font-size: 14px;
